Add goodbye endpoint

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>se.distansakademin</groupId>
 	<artifactId>rest_ez</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
 	<name>rest_ez</name>
 	<description>REST ez</description>
 	<url/>
